<resources>
    <string name="app_name">Improvement Monitor</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="add_word">Add Word</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="task_management">Task Management</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="mess_management">Mess Management</string>
    <string name="search">Search</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="forest_f">Forest: Focus for Productivity</string>
    <string name="my_vocabulary">My Vocabulary</string>
    <string name="in_my_own_way">in my own way</string>
    <string name="secure_messaging">Secure Messaging</string>
    <string name="calculator">Calculator</string>
    <string name="march_friday">March, Friday</string>
    <string name="_3_events">3 Events</string>
    <string name="task_management_">Task Management</string>
    <string name="insert_icon_here">Insert Icon Here</string>
    <string name="str_book_type">Siam Showdagor</string>
    <string name="str_book_type_description">Siam Showdagor is the best Java Developer of Batch 10 CSE JnU</string>
    <string name="str_image_of_book_type">Book Type Description</string>
    <string name="add">Add</string>
    <string name="author_name">Author Name</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="book_name">Book Name</string>
    <string name="update">Update</string>
    <string name="c">X</string>
    <string name="bracketClose">)</string>
    <string name="divide_forwardSlash">/</string>
    <string name="bracketOpen">(</string>
    <string name="point_dot">.</string>
    <string name="ac">AC</string>
    <string name="zero">0</string>
    <string name="syntax_error">Syntax Error</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="target_0">Target: 0</string>
    <string name="saved_0">Saved: 0</string>
    <string name="add_saving">Add Saving</string>
    <string name="digital_wallets">Digital Wallets</string>
    <string name="save_and_track_money">Save and Track Money</string>
    <string name="futuristic_goals">Futuristic Goals</string>
    <string name="wallet_details">Wallet Detail</string>
    <string name="btn_text_save_wallet">Save New Wallet</string>
    <string name="subcategory_name">Subcategory Name</string>
</resources>

