<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Other menu items -->
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications" />

    <item
        android:id="@+id/nav_explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_explore" />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile" />

    <item
        android:id="@+id/nav_add_word"
        android:title="@string/add_word"
        android:icon="@drawable/ic_add_word" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings" />

    <item
        android:id="@+id/nav_help"
        android:title="@string/help"
        android:icon="@drawable/ic_help" />

    <item
        android:id="@+id/nav_about"
        android:title="@string/about"
        android:icon="@drawable/ic_about" />

</menu>
